--- a/addons/real_estate/views/property_views.xml
+++ b/addons/real_estate/views/property_views.xml
@@ -1,53 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-
-    <!-- List View for Properties -->
+    <!-- List View -->
     <record id="view_property_list" model="ir.ui.view">
         <field name="name">real.estate.property.list</field>
         <field name="model">real.estate.property</field>
         <field name="arch" type="xml">
-            <list string="Properties List">
-                <field name="name" string="Name"/>
-                <field name="price" string="Price"/>
-                <field name="state" string="State"/>
-                <field name="partner_id" string="Partner"/>
+            <list>
+                <field name="name"/>
+                <field name="expected_price"/>
+                <field name="selling_price"/>
+                <field name="state"/>
+                <field name="bedrooms"/>
+                <field name="living_area"/>
+                <field name="facades"/>
+                <field name="garage"/>
+                <field name="garden"/>
             </list>
         </field>
     </record>
 
-    <!-- Form View for Properties -->
+    <!-- Form View -->
     <record id="view_property_form" model="ir.ui.view">
         <field name="name">real.estate.property.form</field>
         <field name="model">real.estate.property</field>
         <field name="arch" type="xml">
-            <form string="Property Form">
+            <form>
                 <sheet>
                     <group>
-                        <field name="name" string="Name"/>
-                        <field name="price" string="Price"/>
-                        <field name="state" string="State"/>
-                        <field name="partner_id" string="Partner"/>
-                        <field name="description" string="Description"/>
+                        <field name="name"/>
+                        <field name="description"/>
+                        <field name="postcode"/>
+                        <field name="date_availability"/>
+                        <field name="expected_price"/>
+                        <field name="selling_price"/>
+                        <field name="state"/>
+                    </group>
+                    <group string="Details">
+                        <field name="bedrooms"/>
+                        <field name="living_area"/>
+                        <field name="facades"/>
+                        <field name="garage"/>
+                        <field name="garden"/>
+                        <field name="garden_area"/>
+                        <field name="garden_orientation"/>
                     </group>
                 </sheet>
             </form>
         </field>
     </record>
 
-    <!-- Action to Open Properties in List + Form View -->
+    <!-- Action and Menu -->
     <record id="action_real_estate_properties" model="ir.actions.act_window">
         <field name="name">Properties</field>
         <field name="res_model">real.estate.property</field>
         <field name="view_mode">list,form</field>
-        <field name="help" type="html">
-            <p class="oe_view_nocontent_create">
-                Click to create a new property.
-            </p>
-        </field>
     </record>
 
-    <!-- Menus -->
     <menuitem id="menu_real_estate_root" name="Real Estate"/>
     <menuitem id="menu_real_estate_properties" name="Properties" parent="menu_real_estate_root" action="action_real_estate_properties"/>
-
 </odoo>
