--- a/addons/real_estate/views/real_property_views.xml
+++ b/addons/real_estate/views/real_property_views.xml
@@ -1,41 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <!-- List View -->
-    <record id="view_property_list" model="ir.ui.view">
-        <field name="name">real.estate.property.list</field>
-        <field name="model">real.estate.property</field>
+    <!-- Tree/List view for estate.property -->
+    <record id="view_estate_property_list" model="ir.ui.view">
+        <field name="name">estate.property.list</field>
+        <field name="model">estate.property</field>
         <field name="arch" type="xml">
             <list>
                 <field name="name"/>
                 <field name="expected_price"/>
                 <field name="selling_price"/>
                 <field name="state"/>
-                <field name="bedrooms"/>
-                <field name="living_area"/>
-                <field name="facades"/>
-                <field name="garage"/>
-                <field name="garden"/>
+                <field name="date_availability"/>
             </list>
         </field>
     </record>
 
-    <!-- Form View -->
-    <record id="view_property_form" model="ir.ui.view">
-        <field name="name">real.estate.property.form</field>
-        <field name="model">real.estate.property</field>
+    <!-- Form view for estate.property -->
+    <record id="view_estate_property_form" model="ir.ui.view">
+        <field name="name">estate.property.form</field>
+        <field name="model">estate.property</field>
         <field name="arch" type="xml">
             <form>
                 <sheet>
                     <group>
                         <field name="name"/>
                         <field name="description"/>
-                        <field name="postcode"/>
-                        <field name="date_availability"/>
                         <field name="expected_price"/>
                         <field name="selling_price"/>
                         <field name="state"/>
-                    </group>
-                    <group string="Details">
+                        <field name="date_availability"/>
                         <field name="bedrooms"/>
                         <field name="living_area"/>
                         <field name="facades"/>
@@ -49,13 +42,22 @@
         </field>
     </record>
 
-    <!-- Action and Menu -->
-    <record id="action_real_estate_properties" model="ir.actions.act_window">
+    <!-- Action to open estate.property records -->
+    <record id="action_estate_property" model="ir.actions.act_window">
         <field name="name">Properties</field>
-        <field name="res_model">real.estate.property</field>
+        <field name="res_model">estate.property</field>
         <field name="view_mode">list,form</field>
+        <field name="help" type="html">
+            <p>
+                Manage real estate properties here.
+            </p>
+        </field>
     </record>
 
+    <!-- Menu items -->
     <menuitem id="menu_real_estate_root" name="Real Estate"/>
-    <menuitem id="menu_real_estate_properties" name="Properties" parent="menu_real_estate_root" action="action_real_estate_properties"/>
+    <menuitem id="menu_estate_properties"
+              name="Properties"
+              parent="menu_real_estate_root"
+              action="action_estate_property"/>
 </odoo>
