modified:   addons/real_estate/models/__pycache__/estate_property.cpython-312.pyc 	modified:   addons/real_estate/models/estate_property.py modified:   addons/real_estate/views/real_property_views.xml

--- a/addons/real_estate/views/real_property_views.xml
+++ b/addons/real_estate/views/real_property_views.xml
@@ -26,7 +26,7 @@
                         <field name="name"/>
                         <field name="description"/>
                         <field name="expected_price"/>
-                        <field name="selling_price"/>
+                        <field name="selling_price" readonly="1"/>
                         <field name="state"/>
                         <field name="date_availability"/>
                         <field name="bedrooms"/>
